--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/warpcgd/hawk/issues"
   },
-  "homepage": "https://github.com/warpcgd/hawk#readme"
+  "homepage": "https://github.com/warpcgd/hawk#readme",
+  "dependencies": {
+    "commander": "^2.20.0",
+    "puppeteer": "^1.17.0"
+  }
 }
