--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clui": "^0.3.6",
     "commander": "^2.20.0",
     "figlet": "^1.2.3",
+    "http-server": "^0.11.1",
     "puppeteer": "^1.17.0"
   }
 }
